Mejoras en los estilos

--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -11,6 +11,37 @@
     Default values are subject to change according to your billing account owner
   </div>
   <div class="settings">
+    <h2>Temporary Settings</h2>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Email</div>
+        <div class="col">williamvillalobos@gmail.com</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Password</div>
+        <div class="col">******</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">API Key</div>
+        <div class="col">******</div>
+        <div class="col text-right"><a class="" href="#">SHOW</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">API Key</div>
+        <div class="col">******</div>
+        <div class="col text-right"><a class="" href="#">SHOW</a></div>
+      </div>
+    </div>
+  </div>
+  <div class="settings">
     <h2>Account Settings</h2>
     <div class="field-set">
       <div class="row">
