Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -13,17 +13,16 @@
             FAVICON for The Futures
         </div>
         <div>
-            <div class="card my-3">
+            <div class="my-3">
                 <!-- Card content -->
-                <div class="card-body">
-                    <!-- Title -->
-                    <!-- Text -->
-                    <div class="d-flex">
-                        <div class="mx-4">
+                <div class="">
+                    {# <div class="d-flex justify-content-between">
+                        <div class="">
                             <div class="font-weight-bold">Placed</div>
                             <div>Date</div>
                             <div>By William</div>
                         </div>
+
                         <div class="mx-4">
                             <div class="font-weight-bold">Length</div>
                             <div>5m</div>
@@ -34,59 +33,97 @@
                             <div>$5.00</div>
                             <div>Print receipt</div>
                         </div>
-
                     </div>
-                    <hr>
-                    <div class="card-title">Title of the Request:</div>
-                    <div class="card-text">
-                        FAVICON for The Futures
+                    <hr> #}
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col">
+                                <div class="font-weight-bold">Placed</div>
+                                <div>Date</div>
+                                <div>By William</div>
+                            </div>
+                            <div class="col">
+                                <div class="font-weight-bold">Length</div>
+                                <div>5m</div>
+                                <div></div>
+                            </div>
+                            <div class="col">
+                                <div class="font-weight-bold">Total</div>
+                                <div>$5.00</div>
+                                <div>Print receipt</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-title mt-2">Description:</div>
-                    <div class="card-text">
-                        Hi. Can we please do this task right away. And pause the rest of all my other tasks until this
-                        one
-                        is
-                        finished.
-                        Detail List:
-                        1) Please create thumbnails with each of the pictures attached.
-                        2) Please use do the thumbnails with the style/template similar to the ones being done for
-                        Fadela
-                        Hilali
-                        3) But please DO NOT use Fadela's colours (use the 2 colours attached as the brand colours)
-                        4) The title of each thumbnail should be what is written on the file name (background fading
-                        image
-                        should just relate to the topic on title.
-                        5) Please find WETRANSFER attached with all files needed.
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Title of the Request</div>
+                            <div class="col-6">FAVICON for The Futures</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title mt-2">Specific Text (If Any):</div>
-                    <div class="card-text">
-                        No text
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Description: </div>
+                            <div class="col-6">Hi. Can we please do this task right away. And pause the rest of all my
+                                other tasks until this one is finished.
+                                Detail List:
+                                1) Please create thumbnails with each of the pictures attached.
+                                2) Please use do the thumbnails with the style/template similar to the ones being done
+                                for Fadela
+                                Hilali 3) But please DO NOT use Fadela's colours (use the 2 colours attached as the
+                                brand
+                                colours) 4) The title of each thumbnail should be what is written on the file name
+                                (background fading image should just relate to the topic on title.
+                                5) Please find WETRANSFER attached with all files needed.</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title mt-2">Design Size:</div>
-                    <div class="card-text">
-
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Specific Text (If Any): </div>
+                            <div class="col-6">None</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title">The Design Custom Size:</div>
-                    <div class="card-text">
-                        000 Points x 000 Points
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Design Size:</div>
+                            <div class="col-6">None</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title">The Design is for:</div>
-                    <div class="card-text">
-                        Digital
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Design Custom Size:</div>
+                            <div class="col-6">000 Points x 000 Points</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title">Audience You Are Trying to Reach:</div>
-                    <div class="card-text">
-                        Yoga Students / Yoga Teachers
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">The Design is For:</div>
+                            <div class="col-6">Digital</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <div class="card-title">Links for inspiration: </div>
-                    <div class="card-text">
-                        https://we.tl/t-wbMeDtCmLL
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Audience You Are Trying to Reach:</div>
+                            <div class="col-6">Yoga Students / Yoga Teachers</div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
                     </div>
-                    <hr>
-                    <div class="row">
-                        <div class="container" style="display: flex; justify-content: space-between;">
-                            <p>archivo.docx</p>
-                            <div class="mx-2 float-right text-right">
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Links for inspiration:</div>
+                            <div class="col-6"><a href="" target="_blank">https://we.tl/t-wbMeDtCmLL</a></div>
+                            <div class="col-3 text-right"><a class="" href="#">Edit</a></div>
+                        </div>
+                    </div>
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col font-weight-bold">Archivo.docx</div>
+                            <div class="col text-right">
                                 <a href="#">EDIT</a>
                                 |
                                 <a href="#">SHARE</a>
@@ -95,10 +132,15 @@
                             </div>
                         </div>
                     </div>
-                    <hr>
+                    <div class="field-set">
+                        <div class="row">
+                            <div class="col-3 font-weight-bold">Project Delivered: </div>
+                            <div class="col-6">May 8</div>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="container">
-                            Project Delivered: <span class="text-muted">May 8</span>
+                            <span class="text-muted"></span>
                         </div>
                     </div>
                 </div>
