Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-8">
+    <div class="col-12">
         <div class="header-2">
             <h1 class="main-title">#ID: 00001</h1>
         </div>
@@ -155,7 +155,7 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
-<div class="comments">
+<div class="comments mt-5">
     <h2 class=" text-center">Leave us your comments below</h2>
     <div class="card">
         <div class="card-body comment">
