--- a/resources/views/manage-team.twig
+++ b/resources/views/manage-team.twig
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <a class="futures-color-purple btn-transparent">+ Invite another user</a>
+          <a href="" class="btn-transparent">+ Invite another user</a>
         </div>
       </div>
       <button class="mt-4 ml-0 btn btn-futures">Send Invites</a>
@@ -53,7 +53,7 @@
             <td>oliver@thefutures.io</td>
             <td>22/07/2019</td>
             <td>
-              <a href="" class="futures-color-purple">Revoke</a>
+              <a href="">Revoke</a>
             </td>
           </tr>
         </tbody>
@@ -82,7 +82,7 @@
             <td>Manager</td>
             <td>21/06/2019</td>
             <td>
-              <a class="futures-color-purple" href="">Revoke</a> | <a class="futures-color-purple" href="">Demote to
+              <a href="">Revoke</a> | <a href="">Demote to
                 User</a>
             </td>
           </tr>
@@ -94,7 +94,7 @@
             <td>User</td>
             <td>22/06/2019</td>
             <td>
-              <a class="futures-color-purple" href="">Revoke</a> | <a class="futures-color-purple" href="">Promote to
+              <a href="">Revoke</a> | <a href="">Promote to
                 Manager</a>
             </td>
           </tr>
