Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -127,8 +127,6 @@
     .msger-inputarea {
         display: flex;
         padding: 10px;
-        border-top: var(--border);
-        background: #eee;
     }
 
     .msger-inputarea * {
@@ -140,6 +138,8 @@
 
     .msger-input {
         flex: 1;
+        border: var(--border);
+        outline: none;
     }
 
     .msger-send-btn {
