--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -151,7 +151,6 @@
         transition: background 0.23s;
     }
 
-
     .msger-chat {
         background-color: #fcfcfe;
     }
@@ -159,6 +158,53 @@
 {% endblock %}
 {% block content %}
 <div class="row">
+    <div class="col">
+        <div class="msger">
+            <header class="msger-header text-center">
+                Design Room ID# 00001
+            </header>
+
+            <main class="msger-chat">
+                <div class="msg left-msg">
+                    <div class="msg-img"
+                        style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"></div>
+
+                    <div class="msg-bubble">
+                        <div class="msg-info">
+                            <div class="msg-info-name">William</div>
+
+                            <div class="msg-info-time">12:45 - 22/06/19</div>
+                        </div>
+
+                        <div class="msg-text">
+                            Hi, welcome to SimpleChat! Go ahead and send me a message. 😄
+                        </div>
+                    </div>
+                </div>
+
+                <div class="msg right-msg">
+                    <div class="msg-img"
+                        style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"></div>
+
+                    <div class="msg-bubble">
+                        <div class="msg-info">
+                            <div class="msg-info-name">Angel</div>
+                            <div class="msg-info-time">12:46 - 22/06/19</div>
+                        </div>
+
+                        <div class="msg-text">
+                            You can change your name in JS section!
+                        </div>
+                    </div>
+                </div>
+            </main>
+
+            <form class="msger-inputarea">
+                <input type="text" class="msger-input" placeholder="Enter your message...">
+                <button type="submit" class="msger-send-btn"><i class="fas fa-paper-plane"></i></button>
+            </form>
+        </div>
+    </div>
     <div class="col-6">
         <div class="header-2">
             <h1 class="main-title">#ID: 00001</h1>
@@ -288,53 +334,7 @@
             </div>
         </div>
     </div>
-    <div class="col">
-        <div class="msger">
-            <header class="msger-header text-center">
-                Design Room ID# 00001
-            </header>
 
-            <main class="msger-chat">
-                <div class="msg left-msg">
-                    <div class="msg-img"
-                        style="background-image: url(https://image.flaticon.com/icons/svg/327/327779.svg)"></div>
-
-                    <div class="msg-bubble">
-                        <div class="msg-info">
-                            <div class="msg-info-name">William</div>
-
-                            <div class="msg-info-time">12:45 - 22/06/19</div>
-                        </div>
-
-                        <div class="msg-text">
-                            Hi, welcome to SimpleChat! Go ahead and send me a message. 😄
-                        </div>
-                    </div>
-                </div>
-
-                <div class="msg right-msg">
-                    <div class="msg-img"
-                        style="background-image: url(https://image.flaticon.com/icons/svg/145/145867.svg)"></div>
-
-                    <div class="msg-bubble">
-                        <div class="msg-info">
-                            <div class="msg-info-name">Angel</div>
-                            <div class="msg-info-time">12:46 - 22/06/19</div>
-                        </div>
-
-                        <div class="msg-text">
-                            You can change your name in JS section!
-                        </div>
-                    </div>
-                </div>
-            </main>
-
-            <form class="msger-inputarea">
-                <input type="text" class="msger-input" placeholder="Enter your message...">
-                <button type="submit" class="msger-send-btn">Send</button>
-            </form>
-        </div>
-    </div>
 </div>
 
 <!-- Chat zone -->
