--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -27,7 +27,6 @@
         justify-content: space-between;
         width: 100%;
         max-width: 867px;
-        margin: 25px 10px;
         min-height: 400px;
         border: var(--border);
         border-radius: 5px;
@@ -158,7 +157,7 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col-5">
+    <div class="col-5 pr-4">
         <div class="msger">
             <header class="msger-header text-center">
                 Design Room ID# 00001
@@ -205,7 +204,7 @@
             </form>
         </div>
     </div>
-    <div class="col-7">
+    <div class="col-7 pt-1">
         <div class="header-2">
             <h1 class="main-title">#ID: 00001</h1>
         </div>
@@ -334,7 +333,6 @@
             </div>
         </div>
     </div>
-
 </div>
 
 <!-- Chat zone -->
