--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -69,11 +69,7 @@ thead tr th {
 }
 
 @media screen and (min-width: 628px) {
-    .main-content .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+    .main-content .header {}
 
     .header .btn-futures::before {
         content: 'place '
