--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -156,7 +156,13 @@
 </style>
 {% endblock %}
 {% block content %}
-<div class="row">
+<div class="header">
+    <h1>Design Room</h1>
+    <p class="m-0"><span class="font-weight-bold">#ID:</span> 00001</p>
+    <p class="m-0"><span class="font-weight-bold">Project name:</span> FAVICON for The Futures</p>
+    <p class="m-0"><span class="font-weight-bold">Placed Date:</span> 22/07/2019</p>
+</div>
+<div class="row mt-4">
     <div class="col-6 pr-4">
         <div class="msger">
             <header class="msger-header text-center">
@@ -204,20 +210,9 @@
             </form>
         </div>
     </div>
-    <div class="col-6 pt-1">
-        <div class="header-2">
-            <h1 class="main-title">#ID: 00001</h1>
-        </div>
+    <div class="col-6" style="max-height: 100vh; overflow-y: scroll; overflow-x: hidden;">
         <div>
-            <b style="font-weight: 700; margin-right: 10px;">Project name:</b>
-            FAVICON for The Futures
-        </div>
-        <div>
-            <b style="font-weight: 700; margin-right: 10px;">Placed date:</b>
-            22/07/2019
-        </div>
-        <div>
-            <div class="my-3">
+            <div class="">
                 <!-- Card content -->
                 <div class="">
                     {# <div class="d-flex justify-content-between">
@@ -239,7 +234,7 @@
                         </div>
                     </div>
                     <hr> #}
-                    <div class="field-set">
+                    <div class="field-set" style="border-top: 1px solid #e1e1e1">
                         <div class="row">
                             <div class="col-3 font-weight-bold">Title of the Request</div>
                             <div class="col-7">FAVICON for The Futures</div>
