--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -27,7 +27,9 @@
         justify-content: space-between;
         width: 100%;
         max-width: 867px;
-        min-height: 400px;
+        min-height: 100vh;
+        max-height: 100vh;
+        overflow: hidden;
         border: var(--border);
         border-radius: 5px;
         background: var(--msger-bg);
@@ -45,8 +47,10 @@
 
     .msger-chat {
         flex: 1;
-        overflow-y: auto;
         padding: 10px;
+        max-height: 450px;
+        overflow: scroll;
+        overflow-x: hidden;
     }
 
     .msger-chat::-webkit-scrollbar {
@@ -158,9 +162,16 @@
 {% block content %}
 <div class="header">
     <h1>Design Room</h1>
-    <p class="m-0"><span class="font-weight-bold">#ID:</span> 00001</p>
-    <p class="m-0"><span class="font-weight-bold">Project name:</span> FAVICON for The Futures</p>
-    <p class="m-0"><span class="font-weight-bold">Placed Date:</span> 22/07/2019</p>
+    <div class="row py-2" style="border-top: 2px solid #eeeeee; border-bottom: 2px solid #eeeeee;">
+        <div class="col">
+            <p class="m-0"><span class="font-weight-bold">#ID:</span> 00001</p>
+            <p class="m-0"><span class="font-weight-bold">Project name:</span> FAVICON for The Futures</p>
+        </div>
+        <div class="col">
+            <p class="m-0"><span class="font-weight-bold">Placed Date:</span> 22/07/2019</p>
+            <p class="m-0"><span class="font-weight-bold">Placed By:</span> William Villalobos</p>
+        </div>
+    </div>
 </div>
 <div class="row mt-4">
     <div class="col-6 pr-4">
@@ -244,11 +255,13 @@
                     <div class="field-set">
                         <div class="row">
                             <div class="col-3 font-weight-bold">Description: </div>
-                            <div class="col-7">Hi. Can we please do this task right away. And pause the rest of all my
+                            <div class="col-7">Hi. Can we please do this task right away. And pause the rest of all
+                                my
                                 other tasks until this one is finished.
                                 Detail List:
                                 1) Please create thumbnails with each of the pictures attached.
-                                2) Please use do the thumbnails with the style/template similar to the ones being done
+                                2) Please use do the thumbnails with the style/template similar to the ones being
+                                done
                                 for Fadela
                                 Hilali 3) But please DO NOT use Fadela's colours (use the 2 colours attached as the
                                 brand
