Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -52,6 +52,10 @@
         overflow-x: hidden;
     }
 
+    .msger-buttons {
+        padding: 10px;
+    }
+
     .msger-chat::-webkit-scrollbar {
         width: 6px;
     }
@@ -215,8 +219,8 @@
 
             </main>
             <div class="msger-buttons d-flex justify-content-center">
-                <a href="#" class="my-0 btn btn-futures-outline">Make Video</a>
-                <a href="#" class="my-0 btn btn-futures-outline">Screengrab</a>
+                <a href="#" class="my-0 mx-4">Make Video</a>
+                <a href="#" class="my-0 mx-4">Screengrab</a>
             </div>
             <form class="msger-inputarea">
                 <input type="text" class="msger-input" placeholder="Enter your message...">
