Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -179,8 +179,8 @@
 <div class="row mt-4">
     <div class="col-6 pr-4">
         <div class="msger">
-            <header class="msger-header text-center">
-                Design Room ID# 00001
+            <header class="msger-header text-center font-weight-bold">
+                Design Desk
             </header>
 
             <main class="msger-chat">
@@ -219,8 +219,8 @@
 
             </main>
             <div class="msger-buttons d-flex justify-content-center">
-                <a href="#" class="my-0 mx-4">Make Video</a>
-                <a href="#" class="my-0 mx-4">Screengrab</a>
+                <a href="#" class="my-0 mx-4">Give Video Feedback</a>
+                <a href="#" class="my-0 mx-4">Give Screengrab Feddback</a>
             </div>
             <form class="msger-inputarea">
                 <input type="text" class="msger-input" placeholder="Enter your message...">
