--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -543,6 +543,11 @@ thead th {
     font-weight: 700;
 }
 
+.little-title {
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .remove-image:hover {
     background: #c13b2a;
     color: #ffffff;
