--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -254,7 +254,7 @@
                     <hr> #}
                     <div class="field-set" style="border-top: 1px solid #e1e1e1">
                         <div class="row">
-                            <div class="col-3 little-title">Title of the Request</div>
+                            <div class="col-3 little-title">Title of the Request:</div>
                             <div class="col-7">FAVICON for The Futures</div>
                             <div class="col-2 text-right"><a class="" href="#">Edit</a></div>
                         </div>
