--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -174,6 +174,9 @@
             <p class="m-0"><span class="little-title">Placed Date:</span> 22/07/2019</p>
             <p class="m-0"><span class="little-title">Placed By:</span> William Villalobos</p>
         </div>
+        <div class="col">
+            <p class="m-0"><span class="little-title">Status:</span> Open Ticket</p>
+        </div>
     </div>
 </div>
 <div class="row mt-4">
