Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -54,6 +54,7 @@
 
     .msger-buttons {
         padding: 10px;
+        border-top: 1px solid #ddd;
     }
 
     .msger-chat::-webkit-scrollbar {
@@ -92,7 +93,7 @@
     .msg-bubble {
         max-width: 450px;
         padding: 15px;
-        border-radius: 4px;
+        border-radius: 8px;
         background: var(--left-msg-bg);
     }
 
