Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -183,6 +183,7 @@
         </div>
         <div class="col">
             <p class="m-0"><span class="little-title">Status:</span> Open Ticket</p>
+            <p class="m-0"><span class="little-title">Delivered:</span> N/A</p>
         </div>
     </div>
 </div>
@@ -334,18 +335,8 @@
                         <div class="row">
                             <div class="col little-title">Archivo.docx</div>
                             <div class="col text-right">
-                                <a href="#">EDIT</a>
-                                |
-                                <a href="#">SHARE</a>
-                                |
-                                <a href="#">DOWNLOAD</a>
+                                <a href="#">Add</a>
                             </div>
-                        </div>
-                    </div>
-                    <div class="field-set">
-                        <div class="row">
-                            <div class="col-3 little-title">Project Delivered: </div>
-                            <div class="col-7">May 8</div>
                         </div>
                     </div>
                     <div class="row">
