Mejoras en los estilos

--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -188,7 +188,7 @@
     </div>
 </div>
 <div class="row mt-4">
-    <div class="col-6 pr-4">
+    <div class="pl-0 col-6 pr-4">
         <div class="msger">
             <header class="msger-header text-center little-title">
                 Design Desk
