Mejoras en los estilos

--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -28,21 +28,21 @@
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">API Key</div>
+        <div class="col font-weight-bold">Temporary</div>
         <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">SHOW</a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
-        <div class="col font-weight-bold">API Key</div>
+        <div class="col font-weight-bold">Temporary</div>
         <div class="col">******</div>
-        <div class="col text-right"><a class="" href="#">SHOW</a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
   <div class="settings">
-    <h2>Account Settings</h2>
+    <h2>Account Details</h2>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Email</div>
@@ -57,17 +57,10 @@
         <div class="col text-right"><a class="pr-4" href="#">CHANGE</a></div>
       </div>
     </div>
-    <div class="field-set">
-      <div class="row">
-        <div class="col font-weight-bold">API Key</div>
-        <div class="col">******</div>
-        <div class="col text-right"><a class="pr-4" href="#">SHOW</a></div>
-      </div>
-    </div>
   </div>
   <div class="settings">
     <div>
-      <h2>Personal Settings
+      <h2>Personal Details
         <span class="float-right">
           <a class="pr-4 settings-buttons" href="#">Edit</a>
         </span>
