--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -17,7 +17,7 @@
     font-size: 16px;
     padding: 0;
     font-weight: 700 !important;
-    border-right: 2px solid white;
+    border-right: 2px solid #f3f7f7;
     transition: .25s;
 
 }
