--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -47,60 +47,114 @@
       <div class="row">
         <div class="col font-weight-bold">Email</div>
         <div class="col">williamvillalobos@gmail.com</div>
-        <div class="col text-right"><a class="pr-4" href="#">CHANGE</a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Password</div>
         <div class="col">******</div>
-        <div class="col text-right"><a class="pr-4" href="#">CHANGE</a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
   <div class="settings">
     <div>
-      <h2>Personal Details
-        <span class="float-right">
-          <a class="pr-4 settings-buttons" href="#">Edit</a>
-        </span>
+      <h2>Business Details
       </h2>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">First Name</div>
         <div class="col">William</div>
-        <div class="col text-right"><a class="pr-4" href="#"></a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Last Name</div>
         <div class="col">Villalobos</div>
-        <div class="col text-right"><a class="settings-buttons" href="#"></a></div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Phone</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Street</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">City</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">State</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
   </div>
+  <div class="settings">
+    <div>
+      <h2>Personal Details
+      </h2>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">First Name</div>
+        <div class="col">William</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Last Name</div>
+        <div class="col">Villalobos</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Phone</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Street</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">City</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">State</div>
+        <div class="col">Temporary</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
+  </div>
+
   <div class="settings">
     <h2>Membership Settings</h2>
     <div class="row">
@@ -136,14 +190,14 @@
       <div class="row">
         <div class="col font-weight-bold">First Name</div>
         <div class="col">William</div>
-        <div class="col text-right"><a class="pr-4" href="#"></a></div>
+        <div class="col text-right"><a class="" href="#"></a></div>
       </div>
     </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Last Name</div>
         <div class="col">Villalobos</div>
-        <div class="col text-right"><a class="pr-4" href="#"></a></div>
+        <div class="col text-right"><a class="" href="#"></a></div>
       </div>
     </div>
   </div>
