--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -7,9 +7,6 @@
 <!--/ Main content Header-->
 <!-- Main content Data Display-->
 <div>
-  <div class="alert bg-primary text-white notice-bar" role="alert" style="margin-top: 30px;">
-    Default values are subject to change according to your billing account owner
-  </div>
   <div class="settings">
     <h2>Temporary Settings</h2>
     <div class="field-set">
@@ -41,6 +38,7 @@
       </div>
     </div>
   </div>
+  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
   <div class="settings">
     <h2>Account Details</h2>
     <div class="field-set">
@@ -58,6 +56,7 @@
       </div>
     </div>
   </div>
+  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
   <div class="settings">
     <div>
       <h2>Business Details
@@ -106,6 +105,7 @@
       </div>
     </div>
   </div>
+  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
   <div class="settings">
     <div>
       <h2>Personal Details
@@ -154,7 +154,7 @@
       </div>
     </div>
   </div>
-
+  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
   <div class="settings">
     <h2>Membership Settings</h2>
     <div class="row">
@@ -172,6 +172,7 @@
       </div>
     </div>
   </div>
+  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
   <div class="settings">
     <div>
       <h2>Order Preferences</h2>
