--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -38,7 +38,7 @@
       </div>
     </div>
   </div>
-  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
     <h2>Account Details</h2>
     <div class="field-set">
@@ -56,7 +56,7 @@
       </div>
     </div>
   </div>
-  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
     <div>
       <h2>Business Details
@@ -105,7 +105,7 @@
       </div>
     </div>
   </div>
-  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
     <div>
       <h2>Personal Details
@@ -154,7 +154,7 @@
       </div>
     </div>
   </div>
-  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
     <h2>Membership Settings</h2>
     <div class="row">
@@ -172,7 +172,7 @@
       </div>
     </div>
   </div>
-  <hr style="border-top: 1px solid var(--futures-color); margin-top: 2rem;">
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
     <div>
       <h2>Order Preferences</h2>
