--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -39,7 +39,7 @@
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
-  <div class="settings">
+  <div class="settings pt-0">
     <h2>Account Details</h2>
     <div class="field-set">
       <div class="row">
@@ -57,7 +57,7 @@
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
-  <div class="settings">
+  <div class="settings pt-0">
     <div>
       <h2>Business Details
       </h2>
@@ -106,7 +106,7 @@
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
-  <div class="settings">
+  <div class="settings pt-0">
     <div>
       <h2>Personal Details
       </h2>
@@ -155,7 +155,7 @@
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
-  <div class="settings">
+  <div class="settings pt-0">
     <h2>Membership Settings</h2>
     <div class="row">
       <div class="col">
@@ -173,7 +173,7 @@
     </div>
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
-  <div class="settings">
+  <div class="settings pt-0">
     <div>
       <h2>Order Preferences</h2>
     </div>
