Mejoras en los estilos

--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -8,7 +8,7 @@
 <!-- Main content Data Display-->
 <div>
   <div class="settings">
-    <h2>Temporary Settings</h2>
+    <h2>Scale Your Design</h2>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Email</div>
