--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -16,6 +16,17 @@
         <div class="col text-right"><a class="" href="#">CHANGE</a></div>
       </div>
     </div>
+  </div>
+  <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
+  <div class="settings">
+    <h2>Scale Your Design</h2>
+    <div class="field-set">
+      <div class="row">
+        <div class="col font-weight-bold">Email</div>
+        <div class="col">williamvillalobos@gmail.com</div>
+        <div class="col text-right"><a class="" href="#">CHANGE</a></div>
+      </div>
+    </div>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Password</div>
