Mejoras en los estilos

--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -19,7 +19,7 @@
   </div>
   <hr style="border-top: 1px solid var(--futures-color); margin: 3rem 0;">
   <div class="settings">
-    <h2>Scale Your Design</h2>
+    <h2>Save Money</h2>
     <div class="field-set">
       <div class="row">
         <div class="col font-weight-bold">Email</div>
